FIX: remove overflow-x in html & body for sticky

--- a/themes/hello-elementor/includes/elementor/widgets/HelloPropertyGallery/assets/css/gallery-base-main.css
+++ b/themes/hello-elementor/includes/elementor/widgets/HelloPropertyGallery/assets/css/gallery-base-main.css
@@ -12,11 +12,6 @@
 
 
 /* Common BEGIN */
-body,
-html {
-    overflow-x: hidden;
-}
-
 .img-placeholder {
     position: absolute;
     top: 0;
