--- a/themes/hello-elementor/includes/elementor/widgets/PropertyList/assets/css/base-main.css
+++ b/themes/hello-elementor/includes/elementor/widgets/PropertyList/assets/css/base-main.css
@@ -11,11 +11,6 @@
 }
 
 /* Common BEGIN */
-body,
-html {
-    overflow-x: hidden;
-}
-
 .img-placeholder {
     position: absolute;
     top: 0;
